# fastapi_template_copier

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  copier.yml  pyproject.toml
template/: .copier-answers.yml.jinja  .dockerignore  .editorconfig  .env.example.jinja  .gitignore.jinja  .pre-commit-config.yaml  AGENTS.md.jinja  Dockerfile.jinja  Makefile.jinja  README.md.jinja  alembic.ini  main.py.jinja  pyproject.toml.jinja
template/alembic/: README  env.py.jinja  script.py.mako
template/alembic/versions/: .gitkeep
template/tests/: __init__.py  conftest.py.jinja  test_db_engine.py.jinja  test_db_session.py.jinja  test_docs.py.jinja  test_examples.py.jinja  test_exception_handlers.py.jinja  test_health.py.jinja  test_http_middleware.py.jinja  test_lifespan.py.jinja  test_logging.py.jinja  test_request_context.py.jinja  test_request_params.py.jinja  test_security.py.jinja
template/{{ package_name }}/: main.py.jinja
template/{{ package_name }}/api/: health.py.jinja
template/{{ package_name }}/api/v1/: __init__.py  router.py.jinja
template/{{ package_name }}/core/: __init__.py  config.py.jinja  error_items.py  exception_handlers.py.jinja  exceptions.py  logging.py  logging.py.jinja  request_params.py  responses.py  responses.py.jinja  security.py.jinja
template/{{ package_name }}/crud/: __init__.py
template/{{ package_name }}/db/: __init__.py  session.py.jinja  transaction.py.jinja
template/{{ package_name }}/models/: __init__.py  __init__.py.jinja  base.py
template/{{ package_name }}/services/: __init__.py
tests/: test_template.py
(+8 files in other folders)
