[project]
name = "fastapi-service-template"
version = "0.1.0"
description = "Copier template for production-ready FastAPI services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "copier>=9.10.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.2",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88
